apps/terminus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terminus
  namespace: terminus
  labels:
    app.kubernetes.io/name: terminus
    app.kubernetes.io/instance: terminus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: terminus
      app.kubernetes.io/instance: terminus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: terminus
        app.kubernetes.io/instance: terminus
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: terminus
          image: terminus
          ports:
            - containerPort: 2300
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /app/public/uploads
              name: uploads
          readinessProbe:
            httpGet:
              path: /up
              port: http
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /up
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /up
              port: http
            failureThreshold: 30
            periodSeconds: 5
          resources:
            requests:
              cpu: 11m
              memory: 283Mi
            limits:
              memory: 418Mi
        - name: sidekiq
          image: terminus
          command: ["bundle", "exec", "sidekiq", "-r", "./config/sidekiq.rb"]
          volumeMounts:
            - mountPath: /app/public/uploads
              name: uploads
          resources:
            requests:
              cpu: 442m
              memory: 729Mi
            limits:
              cpu: 676m
              memory: 964Mi
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: terminus-uploads
