apps/terminus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terminus
  namespace: terminus
  labels:
    app.kubernetes.io/name: terminus
    app.kubernetes.io/instance: terminus
spec:
  selector:
    app.kubernetes.io/name: terminus
    app.kubernetes.io/instance: terminus
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
